Redirect IO of npm install